added alot of things

--- a/market-place.html
+++ b/market-place.html
@@ -11,7 +11,7 @@
     <header>
         <p class="logotxt">Farmnexa</p>
         <div class="nav">
-            <a href="#">Home</a> <a href="#">Market Place</a> <a href="#">My Order</a> <a href="#">Cart</a>
+            <a href="#">Home</a> <a href="#">Market Place</a> <a href="order.html">My Order</a> <a href="#">Cart</a>
         </div>
         <a href="#" class="logout">Logout</a>
     </header>
@@ -119,6 +119,94 @@
                     <p>1000/kg</p>
                     <p>Abdullahi umar, Desert Bloom Farms</p>
                     <p>Sokoto State</p>
+                    <div class="container-6">
+                        <p>500kg available</p>
+                        <button>Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-3">
+            <div class="container-4">
+                <img src="images/sweet water melon.png" alt="Sweet water melon">
+                <div class="container-5">
+                    <h3>Swweet Water Melon</h3>
+                    <p>700/kg</p>
+                    <p>John Terso, Green Valley Farm</p>
+                    <p>Benue State</p>
+                    <div class="container-6">
+                        <p>45 pieces available</p>
+                        <button>Add to Cart</but>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-4">
+                <img src="images/Fresh Apples.png" alt="Fresh Red Apples">
+                <div class="container-5">
+                    <h3>Fresh Red Apples</h3>
+                    <p>300 each</p>
+                    <p>Grace Pam, Fruit west Orchards</p>
+                    <p>Plateau State</p>
+                    <div class="container-6">
+                        <p>120 apples available</p>
+                        <button>Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-4">
+                <img src="images/Bannanas.png" alt="Bananas">
+                <div class="container-5">
+                    <h3>Bannana</h3>
+                    <p>200/fingers</p>
+                    <p>Tunde Afolabi</p>
+                    <p>Sun Harvest Farms</p>
+                    <div class="container-6">
+                        <p>500kg available</p>
+                        <button>Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-3">
+            <div class="container-4">
+                <img src="images/Vegetables.png" alt="Vegetables">
+                <div class="container-5">
+                    <h3>Vegetables</h3>
+                    <p>700/kg</p>
+                    <p>John Terso, Green Valley Farm</p>
+                    <p>Benue State</p>
+                    <div class="container-6">
+                        <p>45 pieces available</p>
+                        <button>Add to Cart</but>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-4">
+                <img src="images/Spinach.png" alt="Spinach">
+                <div class="container-5">
+                    <h3>Spinach</h3>
+                    <p>300 each</p>
+                    <p>Grace Pam, Fruit west Orchards</p>
+                    <p>Plateau State</p>
+                    <div class="container-6">
+                        <p>120 apples available</p>
+                        <button>Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-4">
+                <img src="images/Ginger.png" alt="Ginger">
+                <div class="container-5">
+                    <h3>Ginger</h3>
+                    <p>200/fingers</p>
+                    <p>Tunde Afolabi</p>
+                    <p>Sun Harvest Farms</p>
                     <div class="container-6">
                         <p>500kg available</p>
                         <button>Add to Cart</button>
