added footer to order.html, and added icon

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
         <div class="frame-4">
             <div class="frame-5">
-                <p class="frame-4txt">2025 FarmNexa All rights reserved.</p> <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a>
+                <p class="frame-4txt">©2025 FarmNexa All rights reserved.</p> <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a>
             </div>
 
             <div class="social-links">
@@ -258,7 +258,5 @@
         
     </footer>
 
-
-    @media screen and (max-width: 768px) 
 </body>
 </html>
