--- a/market-place.html
+++ b/market-place.html
@@ -6,12 +6,14 @@
     <title>Market Place</title>
 
     <link href="mrk-styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e39cd65f27.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
         <p class="logotxt">Farmnexa</p>
         <div class="nav">
-            <a href="#">Home</a> <a href="#">Market Place</a> <a href="order.html">My Order</a> <a href="#">Cart</a>
+            <a href="#">Home</a> <a href="#">Market Place</a> <a href="order.html">My Order</a> <a href="#"><i class="fa-solid fa-cart-shopping"></i>Cart</a>
         </div>
         <a href="#" class="logout">Logout</a>
     </header>
