--- a/order.html
+++ b/order.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Order</title>
     <link href="order.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e39cd65f27.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -14,8 +16,8 @@
             <a href="#">Home</a>
             <a href="market-place.html">Market Place</a>
             <a href="#">My Order</a>
-            <a href="#">My Account</a>
-            <a href="#">My Cart</a>
+            <a href="#">My Account<i class="fa-solid fa-caret-down"></i></a>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i>My Cart</a>
         </nav>
         <a href="#" class="logout">logout</a>
     </header>
@@ -38,8 +40,172 @@
                 <div class="container-5">
                     <p>Order ID: ORD-101</p><p>Placed On: 2023-06-15</p>
                 </div>
+                <p class="content">delivered</p>
+            </div>
+            <div class="container-6">
+                <p class="content-1">Farmer: Grace Akinwale</p>
+
+                <section>
+                    <!-- <p>Item</p> <p>Quantity</p> <p>price</p> -->
+                    <table>
+                            <tr>
+                                <th>Items</th>
+                                <th>Quantity</th>
+                                <th>Price</th>
+                            </tr>
+
+                            <tr>
+                                <td>Tomatoes</td>
+                                <td>3kg</td>
+                                <td>#2500</td>
+                            </tr>
+
+                            <tr>
+                                <td>Spinach</td>
+                                <td>2 bundles</td>
+                                <td>#600</td>
+                            </tr>
+                    </table>
+                </section>
+
+                <section class="subcon-6">
+                    <div><p>Total: #2,850</p></div>
+                    <div class="button-con">
+                        <button class="button">Clear Cart</button>
+                        <button class="button1">View Details</button>
+                    </div>
+                </sectiom>
+            </div>
+        </div>
+
+        <div class="container-3">
+            <div class="container-4">
+                <div class="container-5">
+                    <p>Order ID: ORD-102</p><p>Placed On: 2023-06-18</p>
+                </div>
+                <p class="content3">Pending</p>
+            </div>
+            <div class="container-6">
+                <p class="content-1">Farmer: Grace Akinwale</p>
+
+                <section>
+                    <!-- <p>Item</p> <p>Quantity</p> <p>price</p> -->
+                    <table>
+                            <tr>
+                                <th>Items</th>
+                                <th>Quantity</th>
+                                <th>Price</th>
+                            </tr>
+
+                            <tr>
+                                <td>Cassava</td>
+                                <td>5kg</td>
+                                <td>#1500</td>
+                            </tr>
+
+                            <tr>
+                                <td>Plantain</td>
+                                <td>1 bunch</td>
+                                <td>#800</td>
+                            </tr>
+                    </table>
+                </section>
+
+                <section class="subcon-6">
+                    <div><p>Total: #2,300</p></div>
+                    <!-- <div class="button-con"> -->
+                        <!-- <button class="button">Clear Cart</button> -->
+                        <button class="button1">View Details</button>
+                    <!-- </div> -->
+                </sectiom>
+            </div>
+        </div>
+
+        <div class="container-3">
+            <div class="container-4">
+                <div class="container-5">
+                    <p>Order ID: ORD-103</p><p>Placed On: 2023-06-18</p>
+                </div>
+                <p class="content2">Processing</p>
+            </div>
+            <div class="container-6">
+                <p class="content-1">Farmer: Grace Akinwale</p>
+
+                <section>
+                    <!-- <p>Item</p> <p>Quantity</p> <p>price</p> -->
+                    <table>
+                            <tr>
+                                <th>Items</th>
+                                <th>Quantity</th>
+                                <th>Price</th>
+                            </tr>
+
+                            <tr>
+                                <td>Yam</td>
+                                <td>2 Tubers</td>
+                                <td>#1,600</td>
+                            </tr>
+
+                            <tr>
+                                <td>Plantain</td>
+                                <td>1kg</td>
+                                <td>#600</td>
+                            </tr>
+                    </table>
+                </section>
+
+                <section class="subcon-6">
+                    <div><p>Total: #2,300</p></div>
+                    <!-- <div class="button-con"> -->
+                        <!-- <button class="button">Clear Cart</button> -->
+                        <button class="button1">View Details</button>
+                    <!-- </div> -->
+                </sectiom>
             </div>
         </div>
     </div>
+
+<footer>
+        <div>
+            <section class="frame-1">
+             <p class="frame-1txt">Connecting farmers and consumers for a <br> sustainable future</p> 
+            </section>
+
+           <div class="frame-2">
+                <section class="frame-3">
+                    <h6>For Farmers</h6>
+                    <p class="frame-2txt">Join as Farmer<br>Farmer Dashboard<br> support</P>
+                </section>
+
+                <section class="frame-3">
+                    <h6>For Consumers</h6>
+                    <p class="frame-2txt">Browse Produce<br>Create Account<br>Track Order</p>
+                </section>
+
+                <section class="frame-3">
+                    <h6>Company</h6>
+                    <p class="frame-2txt">About US<br> Contact<br>Private Policy</p>
+                </section>
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="frame-4">
+            <div class="frame-5">
+                <p class="frame-4txt">©2025 FarmNexa All rights reserved.</p> <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a>
+            </div>
+
+            <div class="social-links">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+        </div>
+        
+    </footer>
+    
 </body>
 </html>
