--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header> 
         <div class="logo">Farmnexa</div>
         <section class="nav">
-            <div class="home"><a href="#">Home</a></div>
+            <div class="home"><a href="index.html">Home</a></div>
             <div class="hiw"><a href="#">How it Works</a></div>
-            <div class="mk"><a href="#">Market Place</a></div>
+            <div class="mk"><a href="market-place.html">Market Place</a></div>
         </section>
 
         <section class="acct">
-            <div class="container"><a href="#" class="login">Login</a></div>
-            <div class="container-1"><a href="#" class="signup">Get Started</a></div>
+            <div class="container"><button href="#" class="login">Login</button></div>
+            <div class="container-1"><button href="#" class="signup">Get Started</button></div>
         </section>
 
         <div class="hamburger" id="hamburger">
