--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </section>
 
         <section class="acct">
-            <div class="container"><button href="#" class="login">Login</button></div>
-            <div class="container-1"><button href="#" class="signup">Get Started</button></div>
+            <div class="container"><a href="#" class="login">Login</a></div>
+            <div class="container-1"><a href="#" class="signup">Get Started</a></div>
         </section>
 
         <div class="hamburger" id="hamburger">
